# vim-trainer

./: .gitignore  Readme.md  dune-project  vtrainer.opam
cursor/: cursor.ml  cursor.mli  dune  normalModeParser.ml
drawer/: drawer.ml  dune
lib/: cursor.ml  dune
resources/levels/: level1.txt
src/core/: drawer.ml  dune  normalModeEvaluator.ml  textBuffer.ml
src/cursor/: cursor.ml  cursor.mli  dune  normalModeParser.ml
src/drawer/: drawer.ml
test/: dune  test_cursor.ml  test_vtrainer.ml
