(lang dune 3.16)

(name vtrainer)

(generate_opam_files true)

(source
 (github dariopellegrino00/vim-trainer))

(authors "Dario Pellegrino")

(maintainers "Dario Pellegrino")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name vtrainer)
 (synopsis "A project to help people train vim made in Ocaml, to learn vim and Ocaml myself.")
 (description "A project to help people train vim made in Ocaml, to learn vim and Ocaml myself. Made using the raylib porting in Ocaml")
 (depends ocaml dune angstrom)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
